--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %} Home {% endblock %}
 {% block main %}
     <section class="first">
-        <h1>Voyager tous le monde</h1>
+        <h1>Voyager <span>le monde</span></h1>
     </section>
     <section class="last">
     </section>
