just adding and deleting some files

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,7 +7,7 @@
     </section>
     <section class="last">
     </section>
-    {% comment %} <div class="mini-card-voyage">
+    <div class="mini-card-voyage">
         <div class="image">
             <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
             <span class="not-liked"></span>
@@ -17,5 +17,5 @@
             <span class="price">Prix: <span>289&euro;</span></span>
             <span class="rating">Prix: <span>289&euro;</span></span>
         </div>
-    </div> {% endcomment %}
+    </div> 
 {% endblock %}
