--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -54,6 +54,21 @@
 <section class="last">
     <div class="mini-card-voyage">
         <div class="image">
+            <img src="{% static 'assets/dubai.jpg' %}" alt="image-hotel">
+            <span class="reaction">
+                <img id="heart" src="{% static 'assets/like-empty.svg' %}" onclick="toggleLike(this)">
+            </span>
+        </div>
+        <div class="body">
+            <span class="localisation"><img src="{% static "assets/localisation.png" alt="localisation" %}">Maroc</span>
+            <span class="price">Prix: <span>289&euro;</span></span>
+            <span class="rating">Durée: <span>8 jours/7 nuits</span></span>
+            <span class="rating">Prix: <span>289&euro;</span></span>
+            <span class="rating">Prix: <span>289&euro;</span></span>
+        </div>
+    </div> 
+    <div class="mini-card-voyage">
+        <div class="image">
             <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
             <span class="reaction">
                 <img id="heart" src="{% static 'assets/like-empty.svg' %}" onclick="toggleLike(this)">
@@ -62,6 +77,8 @@
         <div class="body">
             <span class="localisation"><img src="{% static "assets/localisation.png" alt="localisation" %}">Maroc</span>
             <span class="price">Prix: <span>289&euro;</span></span>
+            <span class="rating">Durée: <span>8 jours/7 nuits</span></span>
+            <span class="rating">Prix: <span>289&euro;</span></span>
             <span class="rating">Prix: <span>289&euro;</span></span>
         </div>
     </div> 
