trying to fetch data

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -60,8 +60,8 @@
             </span>
         </div>
         <div class="body">
-            <span class="title">Voyage organisé delux</span>
-            <span class="localisation"><i class="fa-solid fa-location-dot"></i>Maroc, Casa</span>
+            <span class="title">{{v.titre_voyage}}</span>
+            <span class="localisation"><i class="fa-solid fa-location-dot"></i>{{query.ville.nom_ville}}</span>
             <span class="price">Prix: <span>289&euro;</span></span>
             <span class="rating">Durée: <span>8 jours/7 nuits</span></span>
             <form method="get" action="#">
