just trying to fix

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -52,14 +52,11 @@
     </div>
 </section>
 <section class="second">
-    {% for card in query %}
+    {% comment %} {% for card in query %}
     
     <div class="mini-card-voyage">
         <div class="image">
             <img src="{% static 'assets/dubai.jpg' %}" alt="image-hotel">
-            {% comment "" %}<span class="reaction">
-                <img id="heart" src="{% static 'assets/like-empty.svg' %}" onclick="toggleLike(this)">
-            </span>{% endcomment %}
         </div>
         <div class="body">
             <span class="title">{{card.id_voyage.titre_voyage}}</span>
@@ -73,44 +70,7 @@
             </form>
         </div>
     </div> 
-    {% endfor %}
-    {% comment "" %}
-    <div class="mini-card-voyage">
-        <div class="image">
-            <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
-            <span class="reaction">
-                <img id="heart" src="{% static 'assets/like-empty.svg' %}" onclick="toggleLike(this)">
-            </span>
-        </div>
-        
-        <div class="body">
-            <span class="title">Voyage organisé delux</span>
-            <span class="localisation"><i class="fa-solid fa-location-dot"></i>Maroc, Agadir</span>
-            <span class="price">Prix: <span>289&euro;</span></span>
-            <span class="rating">Durée: <span>8 jours/7 nuits</span></span>
-            <form method="get" action="#">
-                <button type="submit">Details</button>
-            </form>
-        </div>
-    </div> 
-    <div class="mini-card-voyage">
-        <div class="image">
-            <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
-            <span class="reaction">
-                <img id="heart" src="{% static 'assets/like-empty.svg' %}" onclick="toggleLike(this)">
-            </span>
-        </div>
-        <div class="body">
-            <span class="title">Voyage organisé delux</span>
-            <span class="localisation"><i class="fa-solid fa-location-dot"></i>Maroc, Agadir</span>
-            <span class="price">Prix: <span>289&euro;</span></span>
-            <span class="rating">Durée: <span>8 jours/7 nuits</span></span>
-            <form method="get" action="#">
-                <button type="submit">Details</button>
-            </form>
-        </div>
-        
-    </div> {% endcomment %}
+    {% endfor %} {% endcomment %}
 </section>
 
 {% endblock %}
