--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -41,6 +41,7 @@ body {
 header {
     position: fixed;
     /* background-color: rgba(164, 164, 185, 0.168); */
+    top: 0;
     background-color: rgb(255, 255, 255);
     z-index: 998;
     width: 100%;
