--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,7 +44,7 @@
                     <li><a class="active" href="{% url "voyage_organise" %}"><i class="fa-solid fa-wand-magic-sparkles"></i>Voyage organisé</span></a></li>
                     <li><a href="#"><i class="fa-solid fa-kaaba"></i></i><span>Special Omra</span></a></li>
                     <li><a href="#"><i class="fa-solid fa-kaaba"></i></i><span>Special Haj</span></a></li>
-                    <li><a href="#"><i class="fa-solid fa-percent"></i><span>Promotion</span></a></li>
+                    <li><a href="{% url "promotions" %}"><i class="fa-solid fa-percent"></i><span>Promotion</span></a></li>
                 </ul>
             </nav>
         </div>
