--- a/app/templates/promotions.html
+++ b/app/templates/promotions.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %} voyage-organise {% endblock title %}
+{% block title %} promotions {% endblock title %}
 {% block main %}
 <section class="second">
     {% for avoir_instance in query %}
+    {% if avoir_instance.id_voyage.id_promotion.pourcentage > 0 %}
     <div class="mini-card-voyage">
         <div class="image">
             <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
@@ -17,12 +18,14 @@
             <span class="price">Prix: <span>{{ avoir_instance.id_voyage.prix_voyage }} Dhs</span></span>
             <span class="price">Nom hotel: <span>{{ avoir_instance.id_voyage.id_hotel.nom_hotel }}</span></span>
             <span class="rating">Durée: <span>{{ avoir_instance.id_voyage.duree_voyage }} jours / {{ avoir_instance.id_voyage.duree_voyage|add:"-1" }} nuits</span></span>
+            <span class="rating">Promotion: <span>{{ avoir_instance.id_voyage.id_promotion.pourcentage }} %</span></span>
             <form method="get" action="/voyage_organise_details/{{ avoir_instance.id_voyage.id_voyage }}">
                 <button type="submit">Details</button>
             </form>
                      
         </div>        
     </div> 
+    {%endif%}
     {% endfor %}
 </section>
 {% endblock main %}
