--- a/app/templates/promotions.html
+++ b/app/templates/promotions.html
@@ -19,7 +19,7 @@
             <span class="price">Nom hotel: <span>{{ avoir_instance.id_voyage.id_hotel.nom_hotel }}</span></span>
             <span class="rating">Durée: <span>{{ avoir_instance.id_voyage.duree_voyage }} jours / {{ avoir_instance.id_voyage.duree_voyage|add:"-1" }} nuits</span></span>
             <span class="rating">Promotion: <span>{{ avoir_instance.id_voyage.id_promotion.pourcentage }} %</span></span>
-            <form method="get" action="/voyage_organise_details/{{ avoir_instance.id_voyage.id_voyage }}">
+            <form method="get" action="/promotions_details/{{ avoir_instance.id_voyage.id_voyage }}">
                 <button type="submit">Details</button>
             </form>
                      
