--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,12 +38,12 @@
             <nav>
                 <ul>
                     <li><a href="{% url "home" %}" ><i class="fa-solid fa-house"></i><span>Accueil</span></a></li>
-                    <li><a href="#"><i class="fa-solid fa-hotel"></i><span>Hôtels </span></a></li>
-                    <li><a href="#"><i class="fa-solid fa-wand-magic-sparkles"></i>Special Turquie</span></a></li>
-                    <li><a href="#"><i class="fa-solid fa-wand-magic-sparkles"></i>Special Asie</span></a></li>
+                    <li><a href="{% url "hotels" %}"><i class="fa-solid fa-hotel"></i><span>Hôtels </span></a></li>
+                    <li><a href="{% url "special_turqie" %}"><i class="fa-solid fa-wand-magic-sparkles"></i>Special Turquie</span></a></li>
+                    <li><a href="{% url "special_asie" %}"><i class="fa-solid fa-wand-magic-sparkles"></i>Special Asie</span></a></li>
                     <li><a class="active" href="{% url "voyage_organise" %}"><i class="fa-solid fa-wand-magic-sparkles"></i>Voyage organisé</span></a></li>
-                    <li><a href="#"><i class="fa-solid fa-kaaba"></i></i><span>Special Omra</span></a></li>
-                    <li><a href="#"><i class="fa-solid fa-kaaba"></i></i><span>Special Haj</span></a></li>
+                    <li><a href="{% url "special_omra" %}"><i class="fa-solid fa-kaaba"></i></i><span>Special Omra</span></a></li>
+                    <li><a href="{% url "speci" %}"><i class="fa-solid fa-kaaba"></i></i><span>Special Haj</span></a></li>
                     <li><a href="{% url "promotions" %}"><i class="fa-solid fa-percent"></i><span>Promotion</span></a></li>
                 </ul>
             </nav>
