adding content to different views

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,6 @@
 {% extends 'app/templates/base.html' %}
 {% load static %}
+{% block url_1_class %} active {% endblock url_1_class %}
 {% block title %} Home {% endblock %}
 {% block js_block %} 
     <script src="{% static 'js/home.js' %}" type="text/javascript"></script>
