--- a/app/templates/voyage_organise.html
+++ b/app/templates/voyage_organise.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
+{% block url_5_class %} active {% endblock url_5_class %}
 {% block title %} voyage-organise {% endblock title %}
 {% block main %}
+<br><br><br><br><br><br><br><br><br><br>
+<h1>Hello from voyage_organise</h1>
 <section class="second">
     {% for avoir_instance in query %}
     <div class="mini-card-voyage">
