--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,14 +37,14 @@
         <div class="inner2">
             <nav>
                 <ul>
-                    <li><a href="{% url "home" %}" ><i class="fa-solid fa-house"></i><span>Accueil</span></a></li>
-                    <li><a href="{% url "hotels" %}"><i class="fa-solid fa-hotel"></i><span>Hôtels </span></a></li>
-                    <li><a href="{% url "special_turqie" %}"><i class="fa-solid fa-wand-magic-sparkles"></i>Special Turquie</span></a></li>
-                    <li><a href="{% url "special_asie" %}"><i class="fa-solid fa-wand-magic-sparkles"></i>Special Asie</span></a></li>
-                    <li><a class="active" href="{% url "voyage_organise" %}"><i class="fa-solid fa-wand-magic-sparkles"></i>Voyage organisé</span></a></li>
-                    <li><a href="{% url "special_omra" %}"><i class="fa-solid fa-kaaba"></i></i><span>Special Omra</span></a></li>
-                    <li><a href="{% url "speci" %}"><i class="fa-solid fa-kaaba"></i></i><span>Special Haj</span></a></li>
-                    <li><a href="{% url "promotions" %}"><i class="fa-solid fa-percent"></i><span>Promotion</span></a></li>
+                    <li><a class="{% block url_1_class %}{% endblock url_1_class %}" href="{% url "home" %}" ><i class="fa-solid fa-house"></i><span>Accueil</span></a></li>
+                    <li><a class="{% block url_2_class %}{% endblock url_2_class %}" href="{% url "hotels" %}"><i class="fa-solid fa-hotel"></i><span>Hôtels </span></a></li>
+                    <li><a class="{% block url_3_class %}{% endblock url_3_class %}" href="{% url "special_turqie" %}"><i class="fa-solid fa-wand-magic-sparkles"></i>Special Turquie</span></a></li>
+                    <li><a class="{% block url_4_class %}{% endblock url_4_class %}" href="{% url "special_asie" %}"><i class="fa-solid fa-wand-magic-sparkles"></i>Special Asie</span></a></li>
+                    <li><a class="{% block url_5_class %}{% endblock url_5_class %}" href="{% url "voyage_organise" %}"><i class="fa-solid fa-wand-magic-sparkles"></i>Voyage organisé</span></a></li>
+                    <li><a class="{% block url_6_class %}{% endblock url_6_class %}" href="{% url "special_omra" %}"><i class="fa-solid fa-kaaba"></i></i><span>Special Omra</span></a></li>
+                    <li><a class="{% block url_7_class %}{% endblock url_7_class %}" href="{% url "special_haj" %}"><i class="fa-solid fa-kaaba"></i></i><span>Special Haj</span></a></li>
+                    <li><a class="{% block url_8_class %}{% endblock url_8_class %}" href="{% url "promotions" %}"><i class="fa-solid fa-percent"></i><span>Promotion</span></a></li>
                 </ul>
             </nav>
         </div>
