--- a/app/templates/visitor/hotels.html
+++ b/app/templates/visitor/hotels.html
@@ -1,6 +1,31 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load static %}
 {% block url_2_class %} active {% endblock url_2_class %}
+{% block title %} voyage-organise {% endblock title %}
 {% block main %}
-<br><br><br><br><br><br><br><br><br><br>
-<h1>Hello from hotels</h1>
+
+<section class="second">
+    {% for hotel in query %}
+         
+    <div class="mini-card-voyage">
+        <div class="image">
+            <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
+            <span class="reaction">
+                <img id="heart" src="{% static 'assets/like-empty.svg' %}" onclick="toggleLike(this)">
+            </span>
+        </div>
+        <div class="body">
+            <span class="title">{{ hotel.nom_hotel }}</span>
+            <span class="localisation"><i class="fa-solid fa-location-dot"></i>{{ hotel.id_ville.nom_ville }}</span>
+            <span class="price">Prix par nuit: <span>{{ hotel.prix_hotel }} Dhs</span></span>
+            <span class="type_ch">Type Chambre: <span>{{hotel.type_chambre}}</span></span>
+            <form method="get" action="/hotel_details/{{ hotel.id_hotel }}">
+                <button type="submit">Details</button>
+            </form>
+                     
+        </div>        
+    </div> 
+
+    {% endfor %}
+</section>
 {% endblock main %}
