--- a/app/templates/visitor/voyage_organise_details.html
+++ b/app/templates/visitor/voyage_organise_details.html
@@ -22,7 +22,19 @@
         <form method="get" action="/voyage_organise_details/{{ avoir_instance.id_voyage.id_voyage }}">
             <button type="submit">J'en profit</button>
         </form>
-    </div>        
+    </div>            
 </div> 
+<div class = "vols-box">
+    {% for vol in vols%}
+    <div class = "vol">
+        <div class = "image-vol"> 
+            <img src="#">
+        </div>
+        <div class = "body">
+            <p class="descrp">Fake it until u make it</p>
+        </div>
+    </div>
+    {% endfor%}
+</div>
 {% endblock main %}
 
