changes in the styles of pages and adding content to the principale menu in the admin page

--- a/app/static/admin_styles/base.css
+++ b/app/static/admin_styles/base.css
@@ -59,3 +59,8 @@ body {
     text-decoration: none;
     cursor: pointer;
 }
+
+form input[type='text'] {
+    border: 1px solid red;
+    outline: none;
+}
