--- a/app/templates/visitor/promotions_details.html
+++ b/app/templates/visitor/promotions_details.html
@@ -9,9 +9,9 @@
 <div class="mini-card-voyage">
     <div class="image">
         <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
-        <span class="reaction">
+        {% comment %} <span class="reaction">
             <img id="heart" src="{% static 'assets/like-empty.svg' %}" onclick="toggleLike(this)">
-        </span>
+        </span> {% endcomment %}
     </div>
     <div class="body">
         <span class="title">{{ avoir_instance.id_voyage.titre_voyage }}</span>
