--- a/app/templates/visitor/voyage_organise_details.html
+++ b/app/templates/visitor/voyage_organise_details.html
@@ -5,7 +5,7 @@
 <div style="height: 200px;"></div>
 
 <h1>{{ id_voyage }}</h1>
-
+{% for avoir in avoir%}
 <div class="detailed-card-voyage">
     <div class="image">
         <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
@@ -14,19 +14,19 @@
         </span> {% endcomment %}
     </div>
     <div class="body">
-        <span class="title">{{ avoir_instance.id_voyage.titre_voyage }}</span>
-        <span class="localisation"><i class="fa-solid fa-location-dot"></i>{{ avoir_instance.id_ville.id_pays.nom_pays }}, {{ avoir_instance.id_ville.nom_ville }}</span>
-        <span class="price">à partir de <span>{{ avoir_instance.id_voyage.prix_voyage }} Dhs par personne</span></span>
-        <span class="price">Nom hotel: <span>{{ avoir_instance.id_voyage.id_hotel.nom_hotel }}</span></span>
-        <span class="rating">Durée: <span>{{ avoir_instance.id_voyage.duree_voyage }} jours / {{ avoir_instance.id_voyage.duree_voyage|add:"-1" }} nuits</span></span>
-        <form method="get" action="/voyage_organise_details/{{ avoir_instance.id_voyage.id_voyage }}">
+        <span class="title">{{ avoir.id_voyage.titre_voyage }}</span>
+        <span class="localisation"><i class="fa-solid fa-location-dot"></i>{{ avoir.id_ville.id_pays.nom_pays }}, {{ avoir.id_ville.nom_ville }}</span>
+        <span class="price">à partir de <span>{{ avoir.id_voyage.prix_voyage }} Dhs par personne</span></span>
+        <span class="price">Nom hotel: <span>{{ avoir.id_voyage.id_hotel.nom_hotel }}</span></span>
+        <span class="rating">Durée: <span>{{ avoir.id_voyage.duree_voyage }} jours / {{ avoir.id_voyage.duree_voyage|add:"-1" }} nuits</span></span>
+        <form method="get" action="/voyage_organise_details/{{ avoir.id_voyage.id_voyage }}">
             <button type="submit">J'en profit</button>
         </form>
     </div>            
 </div> 
-
+{%endfor%}
 <div class = "vols-box">
-    {% for vol in vols %}
+    {% for vol in inclure %}
     <div class="vol">
         <div class="image-vol"> 
             <img src="{% static "assets/royal-air-maroc.svg" %}">
@@ -34,21 +34,22 @@
             <div class="to">{{ vol.id_vol.date_f_vol }}</div>
         </div>
         <div class="body">
-            <p class="descrp">{{ avoir_instance.id_voyage.id_hotel.type_hotel }}</p>
+            <p class="descrp">Hotel {{ vol.id_voyage.id_hotel.type_hotel }}etoiles, type de chambre: {{ vol.id_voyage.id_hotel.type_hotel }}</p>
         </div>
     </div>
     {% endfor%}
 </div>
-
+<h4>Les commentaire sur ce voyage : </h4>
+{%for comment in comments%}
 <div class="comments">
-    <h4>Les commentaire sur ce voyage : ({{ avoir_instance.id_voyage.id_hotel.type_hotel }} commentaires)</h4>
     <div class="comment">
-        <div class="author">hamid</div>
-        <div class="text">nadi!</div>
-        <div class="time">10:10</div>
-        <div class="evaluation">4</div>
+        <div class="author">{{comment.id_utilisateur.prenom}}</div>
+        <div class="text">{{comment.text_comment}}</div>
+        <div class="time">{{comment.heure_redaction}}, {{comment.date_redaction}}</div>
+        <div class="evaluation">{{comment.evaluation}}</div>
     </div>
 </div>
+{%endfor%}
 {% endblock main %}
 {% block js_block %}
 <script>
